# daterange-chunker

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  scripts.py
daterange_chunker/: __init__.py  app.py  datetuils.py
daterange_chunker/views/: App.enaml  DateRangeForm.enaml
enaml_demo/: person.py  person_view.enaml
